// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QUERY MOCK TESTS Mocking Courses 1`] = `
Object {
  "courses": Array [
    Object {
      "CourseID": Object {
        "code": "247.210.182.70",
        "subject": "Hilll, Homenick and Murazik",
        "term": "FALL",
      },
      "capacity": 13814,
      "endDate": "z@Ro}Sw&/q",
      "hoursPerWeek": 99499,
      "meetingTimes": Array [
        Object {
          "day": "FRIDAY",
          "endTime": "SPm5U[M<^W",
          "startTime": "]=;a45b5K@",
        },
      ],
      "professors": Array [
        Object {
          "active": true,
          "id": 12554,
          "password": "Auto Loan Account",
          "preferences": Array [
            Object {
              "id": Object {
                "code": "68.110.176.180",
                "subject": "Moore, Klein and Huels",
                "term": "FALL",
              },
              "preference": 41351,
            },
          ],
          "role": "USER",
          "username": "Claire",
        },
      ],
      "startDate": "B&FpH6Cmqr",
    },
    Object {
      "CourseID": Object {
        "code": "69.108.33.103",
        "subject": "Kertzmann, Ratke and Weimann",
        "term": "FALL",
      },
      "capacity": 58583,
      "endDate": "VWh{R?)lW^",
      "hoursPerWeek": 47610,
      "meetingTimes": Array [
        Object {
          "day": "FRIDAY",
          "endTime": "A7<faR0KIl",
          "startTime": "T1S#6OjrDR",
        },
      ],
      "professors": Array [
        Object {
          "active": true,
          "id": 9026,
          "password": "Personal Loan Account",
          "preferences": Array [
            Object {
              "id": Object {
                "code": "68.110.176.180",
                "subject": "Moore, Klein and Huels",
                "term": "FALL",
              },
              "preference": 41351,
            },
          ],
          "role": "USER",
          "username": "Alfonzo",
        },
      ],
      "startDate": "\\"B0%!8!U6Q",
    },
  ],
}
`;

exports[`QUERY MOCK TESTS Mocking Schedule 1`] = `
Object {
  "schedule": Object {
    "courses": Array [
      Object {
        "CourseID": Object {
          "code": "149.203.195.107",
          "subject": "Bergstrom - Abbott",
          "term": "FALL",
        },
        "capacity": 75659,
        "endDate": "MR\\"2{s+7<C",
        "hoursPerWeek": 52468,
        "meetingTimes": Array [
          Object {
            "day": "FRIDAY",
            "endTime": "V.697/QXY|",
            "startTime": "^p'ff{dh;<",
          },
        ],
        "professors": Array [
          Object {
            "active": true,
            "id": 13787,
            "password": "Home Loan Account",
            "preferences": Array [
              Object {
                "id": Object {
                  "code": "68.110.176.180",
                  "subject": "Moore, Klein and Huels",
                  "term": "FALL",
                },
                "preference": 41351,
              },
            ],
            "role": "USER",
            "username": "Adrienne",
          },
        ],
        "startDate": "8GeFw;6ko6",
      },
    ],
    "createdAt": "-iyMM4civV",
    "id": "Central African Republic",
    "year": 1,
  },
}
`;

exports[`QUERY MOCK TESTS Mocking findUserByID 1`] = `
Object {
  "findUserById": Object {
    "active": true,
    "id": 92135,
    "password": "Money Market Account",
    "preferences": Array [
      Object {
        "id": Object {
          "code": "68.110.176.180",
          "subject": "Moore, Klein and Huels",
          "term": "FALL",
        },
        "preference": 41351,
      },
    ],
    "role": "USER",
    "username": "Dakota",
  },
}
`;

exports[`QUERY MOCK TESTS Mocking me 1`] = `
Object {
  "me": Object {
    "active": true,
    "id": 74335,
    "password": "Savings Account",
    "preferences": Array [
      Object {
        "id": Object {
          "code": "68.110.176.180",
          "subject": "Moore, Klein and Huels",
          "term": "FALL",
        },
        "preference": 41351,
      },
    ],
    "role": "USER",
    "username": "Zachary",
  },
}
`;

exports[`QUERY MOCK TESTS Mocking survey 1`] = `
Object {
  "survey": Object {
    "courses": Array [
      Object {
        "code": "143.66.68.117",
        "subject": "Bins - Ward",
        "term": "FALL",
      },
    ],
  },
}
`;
